<resources>
    <string name="app_name">Ecescon</string>
    <string name="bot_nav_home_title">Home</string>
    <string name="bot_nav_workshops_title">Workshops</string>
    <string name="bot_nav_passport_title">My Card</string>
    <string name="bot_nav_battles_title">Battles</string>
    <string name="bot_nav_main_menu_title">More</string>
    <string name="home_title">My ECESCON</string>
    <string name="workshops_title">Workshops</string>
    <string name="passport_title">My Conference Card</string>
    <string name="battles_title">Photoshop Battles</string>
    <string name="schedule_title">Schedule</string>
    <string name="profile_menu_tile">Account</string>
    <string name="about_action_bar_title">About</string>
    <string name="user_profile_action_bar_title">My Profile</string>
    <string name="sponsors_title">Sponsors</string>
    <string name="presentations_title">Presentations</string>
    <string name="spots_title">ECESCON Spots</string>
    <string name="mainactivity_actionbar_menu_profile_title">Profile</string>
    <string name="mainactivity_actionbar_scanner_title">QR Scanner</string>
    <string name="main_activity_startup_loading_icon_content_desc">ECESCON 11 Logo</string>
    <string name="loginForm_logoDescription">ECESCON 11 Logo</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_login_failed">Failed to login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="permission_rationale">Sign in</string>
    <string name="login_dialog_login_button_text">Login</string>
    <string name="login_dialog_cancel_button_text">Cancel</string>
    <string name="login_dialog_register_text"><a href="https://sfhmmy.gr/en/authentication/register">You don\'t have an ECESCON account yet? Register one now!</a></string>
    <string name="login_dialog_password_restore_text"><a href="http://www.sfhmmy.gr/en/authentication/password/reset">Forgot password?</a></string>
    <string name="home_photos_list_item_uploader_hint_text">Uploaded by</string>
    <string name="home_photos_list_item_uploaded_date_hint_text">Uploaded on</string>
    <string name="home_photos_list_item_description_hint_text">Dexcription</string>
    <string name="home_photos_list_item_photo_load_error_text">Could not load image.</string>
    <string name="home_photos_list_item_photo_content_desc">Φωτογραφία της δημοσίευσης.</string>
    <string name="home_unlogged_user_notification_text">You have not logged in yet. In order to access all amazing content about the conference, please log in!</string>
    <string name="home_unlogged_user_notification_login_button_text">Login</string>
    <string name="home_unlogged_user_notification_icon_content_desc">Info Icon</string>
    <string name="workshops_item_name_hint_text">Workshop Name</string>
    <string name="workshops_item_image_content_desc">Workshop Image</string>
    <string name="workshops_item_location_icon_content_desc">Location Icon</string>
    <string name="workshops_item_location_hint_text">Location</string>
    <string name="workshops_item_date_icon_content_desc">Date Icon</string>
    <string name="workshops_item_date_hint_text">dd-MM-YYYY</string>
    <string name="workshops_item_time_hint_text">hh:mm - hh:mm</string>
    <string name="workshops_item_more_dates_text_single">and %d more session&#8230;</string>
    <string name="workshops_item_more_dates_text_plural">and %d more sessions&#8230;</string>
    <string name="workshops_unlogged_user_notification_text">You have not logged in yet. In order to enroll into workshops, please log in!</string>
    <string name="workshops_unlogged_user_notification_login_button_text">Login</string>
    <string name="workshops_unlogged_user_notification_icon_content_desc">Info Icon</string>
    <string name="workshops_notification_title">A workshop is about to begin&#8230;</string>
    <string name="workshops_notification_body">A session of workshop %s is starting in less than an hour!</string>
    <string name="workshop_detail_description_header_text">What to expect?</string>
    <string name="workshop_detail_description_hint_text">Description</string>
    <string name="workshop_detail_events_list_header_text">Available Sessions</string>
    <string name="workshop_detail_join_button_text">Request Join</string>
    <string name="workshop_detail_enroll_rules_header_text">Prerequisites</string>
    <string name="workshop_detail_enroll_rules_text">- Answer a workshop specific question.</string>
    <string name="workshop_detail_enroll_status_hint_text">Enroll Status</string>
    <string name="workshop_detail_enroll_status_icon_content_desc">Enroll Status Icon</string>
    <string name="workshop_detail_enroll_status_accepted_text">You have enrolled into this workshop!</string>
    <string name="workshop_detail_enroll_status_rejected_text">Sorry, your application has been rejected!</string>
    <string name="workshop_detail_enroll_status_available_text">This workshop is waiting you&#8230; don\'t miss it!</string>
    <string name="workshop_detail_enroll_status_unavailable_text">Sorry, but this workshop is no longer available!</string>
    <string name="workshop_detail_enroll_status_pending_text">Your application is being verified&#8230;</string>
    <string name="workshop_enroll_dialog_question_hint">Workshop specific question</string>
    <string name="workshop_enroll_dialog_answer_hint">Enter your answer here&#8230;</string>
    <string name="workshop_enroll_dialog_enroll_button_text">Enroll</string>
    <string name="workshop_enroll_dialog_cancel_button_text">Cancel</string>
    <string name="workshop_enroll_dialog_answer_needed">An answer is required.</string>
    <string name="workshop_enroll_dialog_event_selector_header_text">Desired session</string>
    <string name="about_app_name">ECESCON 11 Mobile App</string>
    <string name="about_app_version">version 1.0.1</string>
    <string name="about_designer_header">- Architecture Designing -</string>
    <string name="about_programming_header">- Programming -</string>
    <string name="about_coordination_header">- IT Team Coordination &amp; Operations -</string>
    <string name="about_icon_pack_header">- Icon Pack Designing -</string>
    <string name="about_rest_api_programming_header">- REST API Programming -</string>
    <string name="about_name_dimitrios_karageorgiou">Dimitrios Karageorgiou</string>
    <string name="about_email_dimitrios_karageorgiou">soulrain@outlook.com</string>
    <string name="about_name_ilias_zarka">Ilias Zarka</string>
    <string name="about_email_ilias_zarka">iliazark@gmail.com</string>
    <string name="about_name_iosif_chrysostomou">Iosif Chrysostomou</string>
    <string name="about_email_iosif_chrysostomou">chrysosie@gmail.com</string>
    <string name="about_name_konstantinos_doumanidis">Konstantinos Doumanidis</string>
    <string name="about_email_konstantinos_doumanidis">kdoumani98@gmail.com</string>
    <string name="about_name_thanasis_charisoudis">Thanasis Charisoudis</string>
    <string name="about_email_thanasis_charisoudis">thanasis.harisoudis@gmail.com</string>
    <string name="about_name_christina_anagnostou">Christina Anagnostou</string>
    <string name="about_email_christina_anagnostou">xristinaanag8@gmail.com</string>
    <string name="about_name_matthieu_ndumbi">Matthieu Ndumbi</string>
    <string name="about_email_matthieu_ndumbi">matthieundumbi@gmail.com</string>
    <string name="about_name_konstantinos_strikos">Konstantinos Strikos</string>
    <string name="about_email_konstantinos_strikos">strikos.kon@gmail.com</string>
    <string name="about_name_konstantinos_kanavouras">Konstantinos Kanavouras</string>
    <string name="about_email_konstantinos_kanavouras">electrovesta@gmail.com</string>
    <string name="about_name_christos_daoulas">Christos Daoulas</string>
    <string name="about_email_christos_daoulas">daoulas@outlook.com</string>
    <string name="about_name_chrisa_gkanoudi">Chrysa Gkanoudi</string>
    <string name="about_email_chrisa_gkanoudi">cgkanoudi@gmail.com</string>
    <string name="about_other_credits_text">We really thank each member of the organizing committee for making ECESCON 11 conference a reality!</string>
    <string name="about_other_credits_text2">We really thank each volunteer for carrying out the conference!</string>
    <string name="about_other_credits_text3">With all our regards, we thank all of you attending the conference, giving life to biggest students meeting in Greece!</string>
    <string name="passport_profile_img_desc">Profile Picture</string>
    <string name="passport_qrcode_img_desc">QR Code</string>
    <string name="passport_conference_name">11th Electrical and Computers Engineering Students Conference</string>
    <string name="passport_conference_logo_content_desc">Conference Logo</string>
    <string name="passport_conference_location_and_date">19&#8211;21 April 2019, Thessaloniki, Greece</string>
    <string name="passport_user_role_administrator_text">Administrator</string>
    <string name="passport_user_role_secretary_text">Secretary</string>
    <string name="passport_unlogged_user_notification_text">By logging in you have the ability to check-in simply by your smartphone. Don\'t miss it!</string>
    <string name="passport_unlogged_user_notification_login_button_text">Give me simple check-ins</string>
    <string name="battles_unlogged_user_notification_text">You have not logged in yet. In order to access all amazing content about the conference, please log in!</string>
    <string name="battles_unlogged_user_notification_login_button_text">Login</string>
    <string name="battles_unlogged_user_notification_icon_content_desc">Info Icon</string>
    <string name="battles_photos_list_item_photo_content_desc">Photoshop Battles Contest Photo</string>
    <string name="battles_photos_list_item_photo_load_error_text">Could not load image.</string>
    <string name="battles_photos_list_item_participation_code_hint_text">Participation Code:</string>
    <string name="main_menu_header_bg_content_desc">Blurry Profile Image As Background</string>
    <string name="main_menu_header_user_name_hint">Name Surname</string>
    <string name="main_menu_header_user_role_hint">Role</string>
    <string name="main_menu_item_icon_content_desc">Menu Item Icon</string>
    <string name="main_menu_item_view_profile_text">My Profile</string>
    <string name="main_menu_item_conference_info_text">Conference Schedule</string>
    <string name="main_menu_item_change_account_text">Change Account</string>
    <string name="main_menu_item_about_text">About</string>
    <string name="main_menu_item_sign_in">Sign In</string>
    <string name="main_menu_header_generic_user_name">Another great engineer&#8230;</string>
    <string name="main_menu_item_settings_text">Settings</string>
    <string name="main_menu_item_conference_sponsors_text">Sponsors</string>
    <string name="main_menu_item_conference_presentations_text">Presentations</string>
    <string name="main_menu_item_conference_spots_text">ECESCON Spots</string>
    <string name="main_menu_item_panelsensor_text" translatable="false">PanelSensor</string>
    <string name="checkin_activity_action_bar_title">Management</string>
    <string name="camera_scanner_permission_missing_warning_text">Access to camera is required in order to use QR Code Scanner.</string>
    <string name="camera_scanner_permission_grant_button_text">Grant Permission</string>
    <string name="checkin_status_user_name_label_text">Name:</string>
</resources>