<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bot_nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/bot_nav_home_title" />

    <item
        android:id="@+id/bot_nav_workshops"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/bot_nav_workshops_title" />

    <item
        android:id="@+id/bot_nav_passport"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/bot_nav_passport_title" />

    <item
        android:id="@+id/bot_nav_battles"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/bot_nav_battles_title" />

    <item
        android:id="@+id/bot_nav_info"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/bot_nav_info_title" />
</menu>
