<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".workshops.WorkshopDetailFragment"
        android:padding="16dp">

        <ImageView
            android:id="@+id/workshop_detail_enroll_status_icon"
            android:layout_width="14dp"
            android:layout_height="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/workshop_detail_enroll_status"
            app:layout_constraintBottom_toBottomOf="@id/workshop_detail_enroll_status"
            android:contentDescription="@string/workshop_detail_enroll_status_icon_content_desc" />

        <TextView
            android:id="@+id/workshop_detail_enroll_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/workshop_detail_enroll_status_icon"
            android:layout_marginStart="2dp"
            android:textColor="@color/statusNeutralColor"
            android:hint="@string/workshop_detail_enroll_status_hint_text"
            android:text="@string/workshop_detail_enroll_status_available_text" />

        <ImageView
            android:id="@+id/workshop_detail_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/workshop_detail_enroll_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/workshops_item_image_content_desc"
            android:layout_marginStart="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            android:scaleType="fitStart" />

        <TextView
            android:id="@+id/workshop_detail_events_list_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/workshop_detail_image"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/workshop_detail_events_list_header_text"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp" />

        <com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView
            android:id="@+id/workshop_detail_events_list"
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:divider="@drawable/list_view_basic_divider"
            android:dividerHeight="1px"
            app:layout_constraintTop_toBottomOf="@id/workshop_detail_events_list_header"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/workshop_detail_description_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/workshop_detail_events_list"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:text="@string/workshop_detail_description_header_text"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/workshop_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/workshop_detail_description_header"
            android:layout_marginTop="4dp"
            android:hint="@string/workshop_detail_description_hint_text"
            android:textColor="@color/colorSecondary"/>

        <TextView
            android:id="@+id/workshop_detail_enroll_rules_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/workshop_detail_description"
            android:layout_marginTop="16dp"
            android:text="@string/workshop_detail_enroll_rules_header_text"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/workshop_detail_enroll_rules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/workshop_detail_enroll_rules_header"
            android:layout_marginTop="4dp"
            android:text="@string/workshop_detail_enroll_rules_text"
            android:textColor="@color/colorSecondary"/>

        <Button
            android:id="@+id/workshop_detail_enroll_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/workshop_detail_join_button_text"
            android:textColor="@color/colorTextOnPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/workshop_detail_enroll_rules"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginTop="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
