<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:gravity="center_vertical"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <ImageView
        android:id="@+id/workshop_detail_events_location_icon"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:contentDescription="@string/workshops_item_location_icon_content_desc"
        android:background="@drawable/location_mark"
        android:backgroundTint="@color/colorPrimary"
        android:layout_gravity="center_vertical"/>

    <TextView
        android:id="@+id/workshop_detail_events_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/workshops_item_location_hint_text"
        android:layout_marginStart="4dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp" />

    <ImageView
        android:id="@+id/workshop_detail_events_date_icon"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:contentDescription="@string/workshops_item_date_icon_content_desc"
        android:background="@drawable/date_mark"
        android:backgroundTint="@color/colorPrimary"
        android:layout_gravity="center_vertical"/>

    <TextView
        android:id="@+id/workshop_detail_events_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/workshops_item_date_hint_text"
        android:layout_marginStart="4dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp" />

    <ImageView
        android:id="@+id/workshop_detail_events_time_icon"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:contentDescription="@string/workshops_item_date_icon_content_desc"
        android:background="@drawable/icon_time"
        android:backgroundTint="@color/colorPrimary"
        android:layout_gravity="center_vertical"/>

    <TextView
        android:id="@+id/workshop_detail_events_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/workshops_item_time_hint_text"
        android:layout_marginStart="4dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp" />
</GridLayout>