<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/workshops_item_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:card_elevation="4dp"
    card_view:cardCornerRadius="4dp"
    android:background="@color/white"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/workshops_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/workshops_item_name_hint_text"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="16sp" />

        <View
            android:id="@+id/workshops_item_header_separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSecondary"
            app:layout_constraintTop_toBottomOf="@id/workshops_item_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp" />

        <ImageView
            android:id="@+id/workshops_item_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:layout_constraintTop_toBottomOf="@id/workshops_item_header_separator"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/workshops_item_image_content_desc" />

        <ImageView
            android:id="@+id/workshops_item_location_icon"
            android:layout_width="14dp"
            android:layout_height="14dp"
            app:layout_constraintTop_toTopOf="@id/workshops_item_location"
            app:layout_constraintBottom_toBottomOf="@id/workshops_item_location"
            app:layout_constraintStart_toEndOf="@id/workshops_item_image"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/workshops_item_location_icon_content_desc"
            android:background="@drawable/location_mark" />

        <TextView
            android:id="@+id/workshops_item_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/workshops_item_location_hint_text"
            app:layout_constraintStart_toEndOf="@id/workshops_item_location_icon"
            app:layout_constraintTop_toBottomOf="@id/workshops_item_header_separator"
            android:layout_marginTop="4dp"
            android:layout_marginStart="2dp"
            android:textColor="@color/colorPrimaryDark" />

        <ImageView
            android:id="@+id/workshops_item_date_icon"
            android:layout_width="14dp"
            android:layout_height="14dp"
            app:layout_constraintTop_toTopOf="@id/workshops_item_date"
            app:layout_constraintBottom_toBottomOf="@id/workshops_item_date"
            app:layout_constraintStart_toEndOf="@id/workshops_item_image"
            android:layout_marginStart="4dp"
            android:contentDescription="@string/workshops_item_date_icon_content_desc"
            android:background="@drawable/date_mark" />

        <TextView
            android:id="@+id/workshops_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/workshops_item_date_hint_text"
            app:layout_constraintStart_toEndOf="@id/workshops_item_date_icon"
            app:layout_constraintTop_toBottomOf="@id/workshops_item_location"
            android:layout_marginTop="4dp"
            android:layout_marginStart="2dp"
            android:textColor="@color/colorPrimaryDark" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>