<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/checkin_users_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    card_view:card_elevation="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp">

        <ImageView
            android:id="@+id/home_photos_list_item_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@android:color/background_light"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="@string/home_photos_list_item_photo_content_desc"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/home_photos_list_item_photo_load_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_photos_list_item_photo_load_error_text"
            app:layout_constraintTop_toTopOf="@id/home_photos_list_item_photo"
            app:layout_constraintBottom_toBottomOf="@id/home_photos_list_item_photo"
            app:layout_constraintStart_toStartOf="@id/home_photos_list_item_photo"
            app:layout_constraintEnd_toEndOf="@id/home_photos_list_item_photo"
            android:visibility="gone" />

        <TextView
            android:id="@+id/home_photos_list_item_uploader_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_photos_list_item_uploader_hint_text"
            app:layout_constraintTop_toBottomOf="@id/home_photos_list_item_photo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/home_photos_list_item_uploader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/home_photos_list_item_uploader_hint_text"
            app:layout_constraintTop_toBottomOf="@id/home_photos_list_item_photo"
            app:layout_constraintStart_toEndOf="@id/home_photos_list_item_uploader_hint"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/home_photos_list_item_uploaded_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/home_photos_list_item_uploaded_date_hint_text"
            app:layout_constraintTop_toBottomOf="@id/home_photos_list_item_uploader_hint"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/home_photos_list_item_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/home_photos_list_item_description_hint_text"
            app:layout_constraintTop_toBottomOf="@id/home_photos_list_item_uploaded_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:textColor="@color/colorSecondary" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
