<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".users.LoginActivity">

    <ImageView
        android:id="@+id/loginForm_logo"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:scaleType="centerInside"
        android:contentDescription="@string/loginForm_logoDescription"
        android:src="@drawable/full_logo_dark_224_114"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/loginForm_credentialsWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginForm_logo">

        <!-- TextInputLayout seems to be broken at SDK version 28.0 -->
        <!--<android.support.design.widget.TextInputLayout
            android:id="@+id/loginForm_usernameInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">-->

        <AutoCompleteTextView
            android:id="@+id/loginForm_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

        <!--</android.support.design.widget.TextInputLayout> -->

        <!--<android.support.design.widget.TextInputLayout
            android:id="@+id/loginForm_passwordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            app:passwordToggleEnabled="true">-->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginForm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            android:singleLine="true" />

    <!--</android.support.design.widget.TextInputLayout> -->

        <Button
            android:id="@+id/loginForm_signInButton"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/action_sign_in"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/loginForm_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>